// 用户领域服务
syntax = "proto3";
// app.server
package user.user_server_domain;

option java_multiple_files = true;
option java_package = "com.seezoon.user.server.domain.stub";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

// 用户信息
message QryUserProfileReq {
  int64 uid = 1 [(validate.rules).int64.gt = 0];
}
message QryUserProfileResp {
  UserProfile userProfile = 1;
}

message UserProfile {
  int64 uid = 1;
  string name = 2;
  string mobile = 3;
  string avatar = 4;
  string email = 5;
  google.protobuf.Timestamp birthday = 6;
  string address = 7;
  google.protobuf.Timestamp create_time = 8;
  google.protobuf.Timestamp updateTime = 9;
}

